# conpra

./: .gitignore  readme.md  template.cpp
Week1/: CMakeLists.txt
Week1/1A/: 1A.cpp  A  in.txt  out.txt
Week1/1B/: 1B.cpp  B  in.txt  out.txt
Week1/1C/: 1C.cpp  C  in.txt  out.txt
Week1/1D/: 1D.cpp  D  in.txt  out.txt
Week1/1E/: 1E.cpp  E  in.txt  out.txt
Week2/: CMakeLists.txt
Week2/2A/: 2A.cpp  A  in.txt  out.txt
Week2/2B/: 2B.cpp  B  in.txt  out.txt
Week2/2C/: 2C.cpp  C  in.txt
Week2/2D/: 2D.cpp  D  in.txt  out.txt
Week2/2E/: 2E.cpp  2E_old.cpp  E  in.txt  out.txt
Week3/: CMakeLists.txt
Week3/3A/: 3A.cpp  3A_old.cpp  A  in.txt
Week3/3B/: 3B.cpp  B  in.txt
Week3/3C/: 3C.cpp  C  in.txt
Week3/3D/: 3D.cpp  D  out.txt
Week3/3E/: 3E.cpp  E  in.txt
Week4/: CMakeLists.txt
Week4/4A/: 4A.cpp  A  in.txt  out.txt
Week4/4B/: 4B.cpp  B  in.txt  out.txt
Week4/4C/: 4C.cpp  C  in.txt
Week4/4D/: 4D.cpp  D  in.txt  out.txt
Week4/4E/: 4E.cpp  E  in.txt  out.txt
Week5/: CMakeLists.txt
Week5/5A/: 5A.cpp  5A_edmondskarp.cpp  5A_pr.cpp  A  A_pr  in.txt  out.txt
Week5/5B/: 5B.cpp  5B_pr.cpp  B  B_pr  in.txt  out.txt
Week5/5C/: 5C.cpp  5C_pr.cpp  C  C_pr  in.txt  out.txt
Week5/5D/: 5D.cpp  D  in.txt
Week5/5E/: 5E.cpp  5E_pr.cpp  5E_pr2.cpp  E  E_pr  E_pr2  in.txt  inlarge.txt  out.txt  outlarge.txt
Week6/: CMakeLists.txt
Week6/6A/: 6A copy.cpp  6A.cpp  A  in.txt  out.txt
Week6/6B/: 6B.cpp  6B_old2.cpp  B  in.txt  out.txt
Week6/6C/: 6C.cpp  6C_backtrack1.cpp  6C_old.cpp  C  in.txt  out.txt
Week6/6D/: 6D.cpp  D  in.txt  out.txt
Week6/6E/: 6E.cpp
Week6/6F/: 6F.cpp  F  in.txt  out.txt
Week6/6G/: 6G.cpp  G
Week7/: CMakeLists.txt
Week7/7A/: 7A.cpp  A  in.txt  out.txt
Week7/7B/: 7B.cpp  B  in.txt
Week7/7C/: 7C.cpp  C  in.txt
Week7/7D/: 7D.cpp  D  in.txt
Week7/7E/: 7E.cpp  E  in.txt  out.txt
Week8/: CMakeLists.txt
Week8/8A/: 8A.cpp  A  in.txt  out.txt
Week8/8B/: 8B.cpp  B  in.txt  out.txt
Week8/8C/: 8C.cpp  C  in.txt
Week8/8D/: 8D.cpp  D  in.txt
Week8/8E/: 8E.cpp  8E_knapsack.cpp  8E_knapsack2.cpp  8E_knapsack3.cpp  E  E_knapsack  E_knapsack2  E_knapsack3  in.txt  out.txt
